Mj/feat/integrity service (#3)
* Improve documentation and usage of integrity check results.

* Add testing of the IntegrityService.

* Avoid jvm warnings.

* Avoid jvm warnings.

* Improve integrityService

* Remove project number definition since it is not necessary.

---------

Co-authored-by: Michal Jenicek <michal.jenicek@strv.com>